--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SmartFit - Home</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
-
   <header>
-    <h1>SmartFit</h1>
+    <h1 class="logo">SmartFit</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="meals.html">Meals</a>
@@ -17,12 +18,32 @@
     </nav>
   </header>
 
-  <main>
-    <h2>Welcome to SmartFit</h2>
-    <p>Your weekly meal and workout planner.</p>
+  <main class="container">
+    <section class="hero">
+      <h2>Plan meals. Track workouts. Stay consistent.</h2>
+      <p>A simple planner that uses free public APIs for nutrition and exercises.</p>
+      <div class="hero-actions">
+        <a class="btn" href="meals.html">Search Meals</a>
+        <a class="btn btn-outline" href="workouts.html">Search Workouts</a>
+      </div>
+    </section>
+
+    <section class="quick">
+      <article>
+        <h3>Weekly Planner</h3>
+        <p>Create a weekly plan by adding meals and workouts to days. Saved locally.</p>
+      </article>
+      <article>
+        <h3>Favorites</h3>
+        <p>Save favorite foods & exercises for quick reuse.</p>
+      </article>
+    </section>
   </main>
 
-  <script type="module" src="js/app.js"></script>
+  <footer>
+    <small>SmartFit • Built for WDD 330</small>
+  </footer>
 
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
